--- a/examples/human_orientation_classification/deepdive_examples/uptrain_data_drift_custom_measures.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_data_drift_custom_measures.ipynb
@@ -60,18 +60,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (1.13.1)\n",
+      "Requirement already satisfied: imgaug in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (0.4.0)\n",
+      "Requirement already satisfied: typing_extensions in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from torch) (4.4.0)\n",
+      "Requirement already satisfied: scikit-image>=0.14.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (0.19.3)\n",
+      "Requirement already satisfied: scipy in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.10.1)\n",
+      "Requirement already satisfied: six in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.16.0)\n",
+      "Requirement already satisfied: Pillow in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (9.3.0)\n",
+      "Requirement already satisfied: opencv-python in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (4.7.0.72)\n",
+      "Requirement already satisfied: matplotlib in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (3.7.0)\n",
+      "Requirement already satisfied: Shapely in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.0.1)\n",
+      "Requirement already satisfied: numpy>=1.15 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.23.5)\n",
+      "Requirement already satisfied: imageio in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.25.1)\n",
+      "Requirement already satisfied: tifffile>=2019.7.26 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (2023.2.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (22.0)\n",
+      "Requirement already satisfied: networkx>=2.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (3.0)\n",
+      "Requirement already satisfied: PyWavelets>=1.1.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (1.4.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (0.11.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.0.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (3.0.9)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (4.38.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.4.4)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install torch imgaug"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -96,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -140,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,28 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Epoch 0: Loss 6.170424439734028\n",
-      "Epoch 1: Loss 1.804898705902639\n",
-      "Epoch 2: Loss 1.1475218022891212\n",
-      "Epoch 3: Loss 1.1139714462892492\n",
-      "Epoch 4: Loss 0.7651904336334047\n",
-      "Epoch 5: Loss 0.3935121600208127\n",
-      "Epoch 6: Loss 0.40462788252539983\n",
-      "Epoch 7: Loss 0.38329376321783504\n",
-      "Epoch 8: Loss 0.44259468588855605\n",
-      "Epoch 9: Loss 0.3619024118390551\n",
-      "Model saved at:  trained_models_torch/version_0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from helper_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
     "train_model_torch(training_file, 'version_0')"
@@ -203,23 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluating on  15731  data-points\n"
+      "Evaluating model: version_0  on  15731  data-points\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9092873943169538"
+       "0.9253702879664357"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,12 +397,6 @@
     "    \n",
     "    # A local folder to store the retraining dataset\n",
     "    \"retraining_folder\": \"uptrain_smart_data_data_drift\",\n",
-    "    \n",
-    "    # A function to visualize clusters in the data\n",
-    "    \"cluster_visualize_func\": plot_all_cluster,\n",
-    "    \n",
-    "    # Turn on tensorboard logging\n",
-    "    \"tb_logging\": True,\n",
     "}"
    ]
   },
@@ -396,20 +409,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "NOTE: Using experimental fast data loading logic. To disable, pass\n",
-      "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
-      "    https://github.com/tensorflow/tensorboard/issues/4784\n",
-      "\n",
-      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
-      "TensorBoard 2.9.0 at http://localhost:6007/ (Press CTRL+C to quit)\n"
+      "Deleting the folder:  uptrain_smart_data_data_drift\n",
+      "Deleting the folder:  uptrain_logs\n"
      ]
     }
    ],
@@ -435,41 +443,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51  data-points collected out of  11840  inferred samples\n",
-      "100  data-points collected out of  13360  inferred samples\n",
-      "150  data-points collected out of  14864  inferred samples\n",
-      "201  data-points collected out of  21632  inferred samples\n",
+      "50 edge cases identified out of 12944 total samples\n",
+      "100 edge cases identified out of 14784 total samples\n",
+      "150 edge cases identified out of 23264 total samples\n",
+      "200 edge cases identified out of 25088 total samples\n",
+      "\n",
       "Kicking off re-training\n",
-      "201 data-points selected out of 21632\n",
-      "Training on:  uptrain_smart_data__data_drift/1/training_dataset.json  which has  2005  data-points\n",
-      "Epoch 0: Loss 5.470383109092713\n",
-      "Epoch 1: Loss 1.6415806330928482\n",
-      "Epoch 2: Loss 0.9086297097194329\n",
-      "Epoch 3: Loss 0.4365016576597194\n",
-      "Epoch 4: Loss 0.3796917619592541\n",
-      "Epoch 5: Loss 0.23702367818127187\n",
-      "Epoch 6: Loss 0.20188379989718208\n",
-      "Epoch 7: Loss 0.11222834637017302\n",
-      "Epoch 8: Loss 0.09539343386131066\n",
-      "Epoch 9: Loss 0.10638341195479117\n",
-      "Model saved at:  trained_models_torch/version_1\n",
+      "Creating retraining dataset: uptrain_smart_data_data_drift/1/training_dataset.json  by merging  data/training_data.json  and collected edge cases.\n",
+      "\n",
       "Model retraining done...\n",
+      "\n",
       "Generating comparison report...\n",
-      "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n",
-      "Evaluating on  15731  data-points\n",
-      "Evaluating on  15731  data-points\n",
+      "Evaluating model: version_0  on  15731  data-points\n",
+      "Evaluating model: version_1  on  15731  data-points\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.9092873943169538\n",
-      "Retrained model accuracy (ie 201 smartly collected data-points added):  0.9952323437797979\n",
+      "Old model accuracy:  0.9253702879664357\n",
+      "Retrained model accuracy (ie 201 smartly collected data-points added):  0.9832178501048885\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -489,8 +486,8 @@
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
-    "    inputs = {\"data\": {\"kps\": elem[0][\"kps\"]}, \"id\": elem[0][\"id\"]}\n",
-    "    x_test = torch.tensor(inputs[\"data\"][\"kps\"]).type(torch.float)\n",
+    "    inputs = {\"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]}\n",
+    "    x_test = torch.tensor(inputs[\"kps\"]).type(torch.float)\n",
     "    test_logits = model(x_test).squeeze() \n",
     "    preds = torch.round(torch.sigmoid(test_logits)).detach().numpy()\n",
     "\n",
@@ -571,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
