--- a/examples/human_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_data_integrity.ipynb
@@ -34,18 +34,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (1.13.1)\n",
+      "Requirement already satisfied: imgaug in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (0.4.0)\n",
+      "Requirement already satisfied: typing_extensions in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from torch) (4.4.0)\n",
+      "Requirement already satisfied: matplotlib in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (3.7.0)\n",
+      "Requirement already satisfied: scikit-image>=0.14.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (0.19.3)\n",
+      "Requirement already satisfied: six in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.16.0)\n",
+      "Requirement already satisfied: opencv-python in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (4.7.0.72)\n",
+      "Requirement already satisfied: Pillow in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (9.3.0)\n",
+      "Requirement already satisfied: Shapely in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.0.1)\n",
+      "Requirement already satisfied: scipy in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.10.1)\n",
+      "Requirement already satisfied: imageio in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.25.1)\n",
+      "Requirement already satisfied: numpy>=1.15 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.23.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (22.0)\n",
+      "Requirement already satisfied: PyWavelets>=1.1.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (1.4.1)\n",
+      "Requirement already satisfied: tifffile>=2019.7.26 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (2023.2.3)\n",
+      "Requirement already satisfied: networkx>=2.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (3.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.4.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.0.7)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (3.0.9)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (4.38.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (2.8.2)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install torch imgaug"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -71,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -108,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,18 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Trained model exists. Skipping training again.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from helper_files import get_accuracy_torch, train_model_torch, BinaryClassification\n",
     "train_model_torch('data/training_data.json', 'version_0')"
@@ -153,23 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluating on  15731  data-points\n"
+      "Evaluating model: version_0  on  15731  data-points\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9092873943169538"
+       "0.9253702879664357"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,33 +243,34 @@
     "        \"threshold\": 50\n",
     "    },],\n",
     "    \"retraining_folder\": \"uptrain_smart_data_data_integrity\",\n",
-    "    \"tb_logging\": True\n",
+    "    \"st_logging\": True\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting the folder:  uptrain_logs\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "Deleting the folder:  uptrain_smart_data_data_integrity\n",
+      "Deleting the folder:  uptrain_logs\n",
       "\n",
-      "NOTE: Using experimental fast data loading logic. To disable, pass\n",
-      "    \"--load_fast=false\" and report issues on GitHub. More details:\n",
-      "    https://github.com/tensorflow/tensorboard/issues/4784\n",
+      "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "Serving TensorBoard on localhost; to expose to the network, use a proxy or pass --bind_all\n",
-      "TensorBoard 2.9.0 at http://localhost:6008/ (Press CTRL+C to quit)\n"
+      "  Local URL: http://localhost:8501\n",
+      "  Network URL: http://192.168.6.92:8501\n",
+      "\n",
+      "  For better performance, install the Watchdog module:\n",
+      "\n",
+      "  $ xcode-select --install\n",
+      "  $ pip install watchdog\n",
+      "            \n"
      ]
     }
    ],
@@ -259,8 +289,8 @@
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
-    "    inputs = {\"data\": {\"kps\": elem[0][\"kps\"]}, \"id\": elem[0][\"id\"]}\n",
-    "    x_test = torch.tensor(inputs[\"data\"][\"kps\"]).type(torch.float)\n",
+    "    inputs = {\"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]}\n",
+    "    x_test = torch.tensor(inputs[\"kps\"]).type(torch.float)\n",
     "    test_logits = model(x_test).squeeze() \n",
     "    preds = torch.round(torch.sigmoid(test_logits)).detach().numpy()\n",
     "\n",
@@ -285,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
