--- a/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_sklearn.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_sklearn.ipynb
@@ -46,18 +46,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: imgaug in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (0.4.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.23.5)\n",
+      "Requirement already satisfied: opencv-python in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (4.7.0.72)\n",
+      "Requirement already satisfied: matplotlib in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (3.7.0)\n",
+      "Requirement already satisfied: imageio in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.25.1)\n",
+      "Requirement already satisfied: scipy in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.10.1)\n",
+      "Requirement already satisfied: Pillow in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (9.3.0)\n",
+      "Requirement already satisfied: scikit-image>=0.14.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (0.19.3)\n",
+      "Requirement already satisfied: Shapely in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.0.1)\n",
+      "Requirement already satisfied: six in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.16.0)\n",
+      "Requirement already satisfied: tifffile>=2019.7.26 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (2023.2.3)\n",
+      "Requirement already satisfied: networkx>=2.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (3.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (22.0)\n",
+      "Requirement already satisfied: PyWavelets>=1.1.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (1.4.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (4.38.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.0.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (3.0.9)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.4.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (0.11.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install imgaug"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -82,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +205,7 @@
        "0.8825249507342191"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +268,7 @@
     "    \"evaluation_args\": {\n",
     "        \"inference_func\": get_accuracy_lr,\n",
     "        \"golden_testing_dataset\": golden_testing_file,\n",
-    "    }\n",
+    "    },\n",
     "}"
    ]
   },
@@ -245,9 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting the folder:  uptrain_logs\n"
+     ]
+    }
+   ],
    "source": [
     "framework = uptrain.Framework(cfg)"
    ]
@@ -261,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -270,14 +314,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "91  data-points collected out of  256  inferred samples\n",
-      "181  data-points collected out of  512  inferred samples\n",
-      "253  data-points collected out of  768  inferred samples\n",
+      "91 edge cases identified out of 256 total samples\n",
+      "181 edge cases identified out of 512 total samples\n",
+      "253 edge cases identified out of 768 total samples\n",
+      "\n",
       "Kicking off re-training\n",
-      "253 data-points selected out of 768\n",
+      "Creating retraining dataset: uptrain_smart_data_edge_cases_lr/1/training_dataset.json  by merging  data/training_data.json  and collected edge cases.\n",
+      "\n",
       "Training on:  uptrain_smart_data_edge_cases_lr/1/training_dataset.json  which has  2265  data-points\n",
       "Model saved at:  trained_models_lr/version_1\n",
       "Model retraining done...\n",
+      "\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
       "Trained model exists. Skipping training again.\n",
@@ -302,8 +349,8 @@
     "    # Do model prediction\n",
     "    elem = X_test[i*inference_batch_size:min((i+1)*inference_batch_size,len(X_test))]\n",
     "    ids = id[i*inference_batch_size:min((i+1)*inference_batch_size,len(X_test))]\n",
-    "    inputs = {\"data\": {\"kps\": elem}, \"id\": ids}\n",
-    "    preds = model.predict(inputs['data']['kps'])\n",
+    "    inputs = {\"kps\": elem, \"id\": ids}\n",
+    "    preds = model.predict(inputs['kps'])\n",
     "\n",
     "    # Log model inputs and outputs to the uptrain Framework\n",
     "    idens = framework.log(inputs=inputs, outputs=preds)\n",
@@ -364,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
