--- a/examples/human_orientation_classification/run.ipynb
+++ b/examples/human_orientation_classification/run.ipynb
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sourabhagrawal/miniconda3/envs/speech_to_text/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -557,9 +557,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Pipelines:  {'annotation_method': {'method': <AnnotationMethod.MASTER_FILE: 1>, 'args': {'master_file': 'data/master_annotation_data.json'}}, 'training_func': <function train_model_torch at 0x2a225c3a0>, 'orig_training_file': 'data/training_data.json'} \n",
+      "Training Pipelines:  {'annotation_method': {'method': <AnnotationMethod.MASTER_FILE: 1>, 'args': {'master_file': 'data/master_annotation_data.json'}}, 'training_func': <function train_model_torch at 0x2a05d11b0>, 'orig_training_file': 'data/training_data.json'} \n",
       "\n",
-      "Evaluation Pipelines:  {'inference_func': <function get_accuracy_torch at 0x2a225c160>, 'golden_testing_dataset': 'data/golden_testing_data.json'}\n"
+      "Evaluation Pipelines:  {'inference_func': <function get_accuracy_torch at 0x2a05d0f70>, 'golden_testing_dataset': 'data/golden_testing_data.json'}\n"
      ]
     }
    ],
@@ -601,6 +601,17 @@
      "text": [
       "Deleting the folder:  uptrain_smart_data\n",
       "Deleting the folder:  uptrain_logs\n",
+      "\n",
+      "  You can now view your Streamlit app in your browser.\n",
+      "\n",
+      "  Local URL: http://localhost:8501\n",
+      "  Network URL: http://192.168.6.92:8501\n",
+      "\n",
+      "  For better performance, install the Watchdog module:\n",
+      "\n",
+      "  $ xcode-select --install\n",
+      "  $ pip install watchdog\n",
+      "            \n",
       "Successfully Initialized UpTrain Framework\n"
      ]
     }
@@ -653,17 +664,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.92:8501\n",
-      "\n",
-      "  For better performance, install the Watchdog module:\n",
-      "\n",
-      "  $ xcode-select --install\n",
-      "  $ pip install watchdog\n",
-      "            \n",
       "50 edge cases identified out of 12608 total samples\n",
       "101 edge cases identified out of 13824 total samples\n",
       "151 edge cases identified out of 14896 total samples\n",
@@ -680,7 +680,7 @@
       "---------------------------------------------\n",
       "---------------------------------------------\n",
       "Old model accuracy:  0.9116394380522536\n",
-      "Retrained model accuracy (ie 201 smartly collected data-points added):  0.986650562583434\n",
+      "Retrained model accuracy (ie 201 smartly collected data-points added):  0.9779416438878648\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
       "  Stopping...\n"
@@ -701,8 +701,8 @@
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
-    "    inputs = {\"data\": {\"kps\": elem[0][\"kps\"]}, \"id\": elem[0][\"id\"]}\n",
-    "    x_test = torch.tensor(inputs[\"data\"][\"kps\"]).type(torch.float)\n",
+    "    inputs = {\"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]}\n",
+    "    x_test = torch.tensor(inputs[\"kps\"]).type(torch.float)\n",
     "    test_logits = model(x_test).squeeze() \n",
     "    preds = torch.round(torch.sigmoid(test_logits)).detach().numpy()\n",
     "\n",
