--- a/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_tensorflow.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_tensorflow.ipynb
@@ -293,7 +293,7 @@
     "    \"evaluation_args\": {\n",
     "        \"inference_func\": get_accuracy_tf,\n",
     "        \"golden_testing_dataset\": golden_testing_file,\n",
-    "    }\n",
+    "    },\n",
     "}"
    ]
   },
@@ -593,8 +593,8 @@
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
-    "    inputs = {\"data\": {\"kps\": elem[0][\"kps\"]}, \"id\": elem[0][\"id\"]}\n",
-    "    preds = model.predict(inputs['data']['kps'])\n",
+    "    inputs = {\"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]}\n",
+    "    preds = model.predict(inputs['kps'])\n",
     "\n",
     "    # Log model inputs and outputs to the uptrain Framework\n",
     "    idens = framework.log(inputs=inputs, outputs=preds)\n",
@@ -655,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
