--- a/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_torch.ipynb
+++ b/examples/human_orientation_classification/deepdive_examples/uptrain_edge_cases_torch.ipynb
@@ -59,7 +59,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (1.13.1)\n",
+      "Requirement already satisfied: imgaug in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (0.4.0)\n",
+      "Requirement already satisfied: typing_extensions in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from torch) (4.4.0)\n",
+      "Requirement already satisfied: scipy in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.10.1)\n",
+      "Requirement already satisfied: scikit-image>=0.14.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (0.19.3)\n",
+      "Requirement already satisfied: opencv-python in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (4.7.0.72)\n",
+      "Requirement already satisfied: Pillow in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (9.3.0)\n",
+      "Requirement already satisfied: matplotlib in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (3.7.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.23.5)\n",
+      "Requirement already satisfied: imageio in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.25.1)\n",
+      "Requirement already satisfied: Shapely in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (2.0.1)\n",
+      "Requirement already satisfied: six in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from imgaug) (1.16.0)\n",
+      "Requirement already satisfied: tifffile>=2019.7.26 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (2023.2.3)\n",
+      "Requirement already satisfied: networkx>=2.2 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (3.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (22.0)\n",
+      "Requirement already satisfied: PyWavelets>=1.1.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from scikit-image>=0.14.2->imgaug) (1.4.1)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (3.0.9)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (4.38.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (2.8.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.4.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages (from matplotlib->imgaug) (1.0.7)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install torch imgaug"
    ]
@@ -68,7 +97,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sourabhagrawal/miniconda3/envs/prod_merge1/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import subprocess\n",
@@ -168,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9092873943169538"
+       "0.9253702879664357"
       ]
      },
      "execution_count": 5,
@@ -239,7 +277,7 @@
     "    \"evaluation_args\": {\n",
     "        \"inference_func\": get_accuracy_torch,\n",
     "        \"golden_testing_dataset\": golden_testing_file,\n",
-    "    }\n",
+    "    },\n",
     "}"
    ]
   },
@@ -254,15 +292,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleting the folder:  uptrain_logs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "framework = uptrain.Framework(cfg)"
    ]
@@ -285,11 +315,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "51  edge cases identified out of  944  total samples\n",
-      "101  edge cases identified out of  1824  total samples\n",
-      "152  edge cases identified out of  2800  total samples\n",
-      "201  edge cases identified out of  3648  total samples\n",
-      "250  edge cases identified out of  4560  total samples\n",
+      "51 edge cases identified out of 944 total samples\n",
+      "101 edge cases identified out of 1824 total samples\n",
+      "152 edge cases identified out of 2800 total samples\n",
+      "201 edge cases identified out of 3648 total samples\n",
+      "250 edge cases identified out of 4560 total samples\n",
       "\n",
       "Kicking off re-training\n",
       "Creating retraining dataset: uptrain_smart_data_edge_cases_torch/1/training_dataset.json  by merging  data/training_data.json  and collected edge cases.\n",
@@ -301,8 +331,8 @@
       "Evaluating model: version_1  on  15731  data-points\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.9092873943169538\n",
-      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.9877312313266798\n",
+      "Old model accuracy:  0.9253702879664357\n",
+      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.9832178501048885\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -324,8 +354,8 @@
     "for i,elem in enumerate(real_world_dataset):\n",
     "\n",
     "    # Do model prediction\n",
-    "    inputs = {\"data\": {\"kps\": elem[0][\"kps\"]}, \"id\": elem[0][\"id\"]}\n",
-    "    x_test = torch.tensor(inputs[\"data\"][\"kps\"]).type(torch.float)\n",
+    "    inputs = {\"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]}\n",
+    "    x_test = torch.tensor(inputs[\"kps\"]).type(torch.float)\n",
     "    test_logits = model(x_test).squeeze() \n",
     "    preds = torch.round(torch.sigmoid(test_logits)).detach().numpy()\n",
     "    idens = framework.log(inputs=inputs, outputs=preds)\n",
@@ -390,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
